<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_speed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.converter.Speed">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txtSpeed"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/txtSpeed" />

    <TextView
        android:text="@string/txtDescrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSpeed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/txtDescrp" />

    <CheckBox
        android:text="@string/chkkph2mph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/txtDescrp"
        android:layout_toStartOf="@+id/txtDescrp"
        android:id="@+id/chkkph2mph" />

    <CheckBox
        android:text="@string/chkmph2kph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chkkph2mph"
        android:layout_toRightOf="@+id/txtDescrp"
        android:layout_toEndOf="@+id/txtDescrp"
        android:id="@+id/chkmph2kph" />

    <Button
        android:text="@string/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:id="@+id/btnHome" />

    <Button
        android:text="@string/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkkph2mph"
        android:layout_alignLeft="@+id/btnHome"
        android:layout_alignStart="@+id/btnHome"
        android:layout_marginTop="23dp"
        android:id="@+id/btnConvert" />
</RelativeLayout>
