<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.converter.Weight">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txtWeight"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:id="@+id/txtWeight" />

    <TextView
        android:text="@string/txtDescrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/txtDescrp" />

    <CheckBox
        android:text="@string/chkkg2lbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/txtDescrp"
        android:layout_toStartOf="@+id/txtDescrp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/chkkg2lbs" />

    <CheckBox
        android:text="@string/chklbs2kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chkkg2lbs"
        android:layout_toRightOf="@+id/txtDescrp"
        android:layout_toEndOf="@+id/txtDescrp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:id="@+id/chklbs2kg" />

    <Button
        android:text="@string/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkkg2lbs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:id="@+id/btnHome" />

    <Button
        android:text="@string/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkkg2lbs"
        android:layout_alignRight="@+id/btnHome"
        android:layout_alignEnd="@+id/btnHome"
        android:layout_marginTop="12dp"
        android:id="@+id/btnConvert" />
</RelativeLayout>
