<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.converter.MainActivity">

    <Button
        android:text="@string/btnLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/btnLength" />

    <Button
        android:text="@string/btnWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSpeed"
        android:layout_alignRight="@+id/btnSpeed"
        android:layout_alignEnd="@+id/btnSpeed"
        android:layout_marginTop="65dp"
        android:id="@+id/btnWeight" />

    <Button
        android:text="@string/btnSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:id="@+id/btnSpeed"
        android:layout_below="@+id/btnLength"
        android:layout_alignLeft="@+id/btnLength"
        android:layout_alignStart="@+id/btnLength" />
</RelativeLayout>
